style: adding css styling to main page

--- a/ingstagram/src/styles/reset.scss
+++ b/ingstagram/src/styles/reset.scss
@@ -1,3 +1,24 @@
+
+// font
+@font-face {
+  font-family: "NotoSansKR";
+  src: url('../assets/font/NotoSansKR-Light.otf') format("otf");
+  unicode-range: U+0020-007E;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url('../assets/font/Roboto-Medium.ttf') format("ttf");
+  font-style: medium;
+  unicode-range: U+0041-005A, U+0061-007A;
+}
+@font-face {
+  font-family: "Roboto";
+  src: url('../assets/font/Roboto-Bold.ttf') format("ttf");
+  font-style: bold;
+  unicode-range: U+0041-005A, U+0061-007A;
+}
+
 *, *:before, *:after{
     box-sizing: border-box;
 }
@@ -12,6 +33,7 @@ html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockq
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     text-size-adjust: none;
+    font-family:'NotoSansKR', 'Roboto', sans-serif ;
 }
 
 footer, header, nav, section, main{
@@ -20,6 +42,10 @@ footer, header, nav, section, main{
 
 body{
     line-height: 1;
+    -ms-overflow-style: none;
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
 
 ol, ul, li{
@@ -51,4 +77,9 @@ a:focus,
 a:active,
 a:hover {
   outline: 0;
+}
+button{
+    border:0;
+    padding: 0;
+    background-color: transparent;
 }
