--- a/ingstagram/src/styles/style.scss
+++ b/ingstagram/src/styles/style.scss
@@ -1,25 +1,210 @@
 // common
+$dark : #000;
+$light : #fff;
+
 @mixin mode($mode){
     background-color:$mode;
+    transition:0.4s linear;
+}
+#root{
+    width: 100%;
+    height: 100%;
+}
+.App{
+    width: 100%;
+    height: 100%;
+    @include mode($light);
+}
+div[class*=-wrap]:not(.header-wrap,.nav-wrap){
+    width:94%;
+    position: relative;
+    top: 55px;
+    padding-bottom: 70px;
+    margin:0 auto;
+}
+.header-wrap{
+    @include mode($light);
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+    overflow:hidden;
+    .header-inner{
+        display:flex;
+        padding:2%;
+        justify-content: space-between;
+        #logo{
+            width:130px;
+            height: calc(69.67px / 2);
+            a{
+            width: 100%;
+            height: 100%;
+            display:block;
+            position: relative;
+            overflow: hidden;
+                img{
+                    width:100%;
+                    position: absolute;
+                }
+            }
+        }
+        button{
+            width: 30px;
+            height: 30px;
+            display: block;
+            background-color: transparent;
+            text-align: -9999px;
+            background-image: url(../assets/images/icons.png);
+            background-size: 120px;
+            background-position-x: 30px;
+            cursor: pointer;
+        }
+    }
+}
+.nav-wrap{
+        width:100%;
+        position: fixed;
+        bottom: 0;
+        padding:20px 0;
+        @include mode($light);
+    #nav{
+        ul{
+            display: flex;
+            justify-content: space-between;
+            li{
+                width:33%;
+                text-align: center;
+                a{
+                    display: inline-block;
+                    width: 30px;
+                    height: 30px;
+                    margin:0 auto;
+                    background-image: url(../assets/images/icons.png);
+                    background-size: 120px;
+                    text-indent: -9999px;
+                }
+                 &:nth-child(2){
+                     a{
+                         background-position-x:-30px 
+                     }
+                 } 
+                  &:nth-child(3){
+                     a{
+                         background-position-x:-60px 
+                     }
+                 }   
+            }
+        }
+    }
+}
+.main-wrap{
+
+    ul{
+        li{
+            margin-bottom: 5vw;
+            .profile-box{
+                padding: 8px 0;
+                div{
+                    display: flex;
+                    align-items: center;
+                    .profile-img{
+                    display: inline-block;
+                    width: 35px;
+                    height: 35px;
+                    border-radius: 50%;
+                    margin-right: 5px;
+                    background-color: paleturquoise;
+                    }
+                    .profile-name{
+                        font-weight: bold;
+                    }
+                }
+            }
+            .image-box{
+                width:100%;
+                overflow: hidden;
+                position: relative;
+                img{
+                    position: absolute;
+                    width: 100%;
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
+                &::after{
+                    content: '';
+                    display: block;
+                    padding-bottom: 100%;
+                }
+            }
+            .text-box{
+                display: flex;
+                margin-top: 10px;
+                p{
+                    span{
+                    font-weight: bold;
+                    letter-spacing: 0;
+                    display: inline-block;
+                    margin-right: 5px;
+                    }
+                display: -webkit-box;
+                font-size: 0.85rem;
+                line-height: 1.5rem;
+                max-height: 1.5rem;
+                text-overflow: ellipsis;
+                -webkit-line-clamp: 1;
+	            -webkit-box-orient: vertical;
+                overflow: hidden;
+                letter-spacing: -0.5px;
+                    &.#{'show'}{
+                        -webkit-line-clamp: unset;
+                        max-height:100%;
+                    }
+                }
+              
+                button{
+                    color: #666;
+                    padding: 0 3px
+                }
+            }
+        }
+    }
 }
 
 
-
-// header
-.header-wrap{
-    overflow:hidden;
-    @include mode(#fff);
-    .header-inner{
-        #logo{
-            a{
-            width: 10%;
-            display:block;
-            background-color:orange;
-                img{
-                    width:100%;
+// Dark
+.App.dark{
+    @include mode($dark);
+    .header-wrap{
+         @include mode($dark);
+        .header-inner{
+            #logo{
+                a{
+                    img{
+                     bottom: 0;
+                    }
                 }
+            }
+            button{
+                background-position-x: 30px;
+                background-position-y: -34px;
+            }
         }
     }
+    .nav-wrap{
+         @include mode($dark);
+        #nav{
+            ul{
+                li{
+                    a{
+                        background-position-y: -34px;
+                    }
+                }
+            }
+        }
     }
-    
+    .main-wrap{
+        color: #fff;
+        button{
+            color: #fff;
+        }
+    }
 }
