--- a/ingstagram/src/styles/reset.scss
+++ b/ingstagram/src/styles/reset.scss
@@ -33,7 +33,7 @@ html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockq
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     text-size-adjust: none;
-    font-family:'NotoSansKR', 'Roboto', sans-serif ;
+    font-family: "NotoSansKR","Roboto", sans-serif;
 }
 
 footer, header, nav, section, main{
@@ -69,6 +69,10 @@ table{
 input{
     -webkit-appearance: none;
     border-radius: 0;
+    font-family: "NotoSansKR","Roboto", sans-serif;
+    &[type=file]{
+        display: none;
+    }
 }
 a{
   text-decoration: none;
@@ -81,5 +85,6 @@ a:hover {
 button{
     border:0;
     padding: 0;
+    font-family: "NotoSansKR","Roboto", sans-serif;
     background-color: transparent;
 }
